--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -21,6 +21,25 @@ services:
       timeout: 5s
       retries: 5
 
+  liquibase:
+    image: liquibase/liquibase:4.24.0
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./src/main/resources/db/changelog:/liquibase/changelog
+    command:
+      - --searchPath=/liquibase/changelog
+      - --changelog-file=master.xml
+      - --driver=org.postgresql.Driver
+      - --url=jdbc:postgresql://db:5432/postgresql
+      - --username=${DB_USER}
+      - --password=${DB_PASS}
+      - update
+    networks:
+      - app-network
+    restart: "no"
+
   app:
     build: .
     depends_on:
