fit: edit backend host

--- a/tg-bot/src/main/resources/application.properties
+++ b/tg-bot/src/main/resources/application.properties
@@ -6,5 +6,5 @@ bot.queueCapacity=100
 
 bot.token=${BOT_TOKEN}
 
-backend.host=http://localhost:8080
+backend.host=http://backend:8080
 bot.miniapp.host=http://localhost:8082
