--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,11 +62,11 @@ services:
       - app-network
 
   ml:
-    build: ./ml # path to Dockerfile in ml
+    build: ./ml/fastapi-app
     env_file:
       - .env
     ports:
-      - "8082:8082"
+      - "8000:8000"
     networks:
       - app-network
 
