--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "mealix-frontend",
+  "name": "mealix",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://iu-capstone-project-2025.github.io/mealix",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build && cp dist/index.html dist/404.html",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -15,15 +18,16 @@
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/node": "^20.14.10",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.0.0",
     "eslint-plugin-react-hooks": "^5.0.0-rc",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.2.2",
     "vite": "^6.3.5"
   }
