feat: edit url to mini app

--- a/tg-bot/src/main/resources/application.properties
+++ b/tg-bot/src/main/resources/application.properties
@@ -7,4 +7,4 @@ bot.queueCapacity=100
 bot.token=${BOT_TOKEN}
 
 backend.host=http://backend:8080
-bot.miniapp.host=http://localhost:8082
+bot.miniapp.host=https://mealix.vercel.app
