--- a/ml/fastapi-app/requirements.txt
+++ b/ml/fastapi-app/requirements.txt
@@ -6,6 +6,7 @@ sentence-transformers==2.7.0
 faiss-cpu==1.8.0
 rapidfuzz==3.9.0
 pymorphy2==0.9.1
+pymorphy3==2.0.4
 numpy==1.26.4
 pandas==2.2.2
 python-dotenv==1.0.1
